a1/brendan_gordon/TEST_PROGRAMS/invalidtype/ethan_macdonald/float_to_string.min
var s: string;

s = 1.000;
